# recipients_repository

./: pyproject.toml
src/recipients_repository/: __init__.py  recipients_repository.py
