[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "boto3==1.34.125",
    "botocore==1.34.125",
    "jmespath==1.0.1",
    "python-dateutil==2.9.0.post0",
    "s3transfer==0.10.1",
    "six==1.16.0",
    "urllib3==2.2.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "recipients_repository"
version = "0.1"
requires-python = ">=3.12"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]

[project.urls]
Home = "https://github.com/Zloooy/recipients_repository"
"Repository" = "https://github.com/Zloooy/recipients_repository"

[tool.setptools]
use-scm-version = true
include-package-data = true

[tool.setuptools_scm]